Bug 66104 - pd crashes X session when creating object.
Summary: pd crashes X session when creating object.
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-24 04:33 UTC by Tobias Brodel
Modified: 2013-07-22 10:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Please find output of lspci -v, dmesg and Xorg.0.log attached. (280.00 KB, text/plain)
2013-06-24 04:33 UTC, Tobias Brodel
no flags Details
backtrace of xorg-server (gdb) (19.83 KB, text/plain)
2013-06-24 12:43 UTC, Tobias Brodel
no flags Details

Description Tobias Brodel 2013-06-24 04:33:28 UTC
Created attachment 81293 [details]
Please find output of lspci -v, dmesg and Xorg.0.log attached.

X crashes when trying to create an object with more than three characters in a previously saved Pure Data patch (version 44.3-2 and pd-extended 43.4-1). An intel gpu is required to reproduce this bug.

The Pure Data devs claim this is a distribution bug or a bug in X.
I'm using Arch Linux (xorg-server 1.14.1 and xf86-video-intel 2.21.9) but this is also experienced in Ubuntu 13.04: 
http://sourceforge.net/p/pure-data/bugs/1075/

This bug has also been reported in the Arch Linux bugtracker:
https://bugs.archlinux.org/task/35830

STEPS TO REPRODUCE:
Open a previously saved patch, create object box, type four characters. The fourth will crash X.
Comment 1 Chris Wilson 2013-06-24 08:06:23 UTC
It looks more like an input driver bug. Can you please attach gdb and grab a symbolic backtrace (will require installing debug symbols)?
Comment 2 Tobias Brodel 2013-06-24 12:43:18 UTC
Created attachment 81334 [details]
backtrace of xorg-server (gdb)

I compiled xorg-server and xf86-video-intel with debug symbols and ran them through gdb. I hope that's what you meant, I've never used gdb before.. An educational evening. Please find the full output attached.
Comment 3 Chris Wilson 2013-06-24 13:34:31 UTC
Thanks, that was very useful.

commit c88d911d4209a8ede5ec705ad925383c69182977
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jun 24 14:30:00 2013 +0100

    sna: Initialise gc->ops->PolyPoint for miWideDash
    
    The miWideDash may also call PolyPoint rather than emit spans, so make
    sure that we correctly prepare sna_poly_point before calling mi*.
    
    Reported-by: Tobias Brodel <toby.jamesjoy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66104
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 4 sanderson 2013-07-22 10:03:00 UTC
The bug is marked as fixed. What has been fixed? Is the fix already committed and what will be the revision to checkout in order to patch a system affected by the bug?

Thank you very much
Comment 5 Chris Wilson 2013-07-22 10:07:54 UTC
Yes, that commit id is when the fix landed in the upstream repository and was released with xf86-video-intel-2.21.11.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.